--- a/HubTechSolutionsjava+maven/pom.xml
+++ b/HubTechSolutionsjava+maven/pom.xml
@@ -20,11 +20,18 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+            <version>5.0.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.23</version>
+            <version>8.0.28</version>  <!-- Check for the latest version -->
         </dependency>
     </dependencies>
+    
     
     <build>
         <plugins>
