--- a/HubTechSolutionsjava+maven/pom.xml
+++ b/HubTechSolutionsjava+maven/pom.xml
@@ -30,6 +30,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.28</version>  <!-- Check for the latest version -->
         </dependency>
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
     </dependencies>
     
     
