--- a/HubTechSolutionsjava+maven/pom.xml
+++ b/HubTechSolutionsjava+maven/pom.xml
@@ -35,6 +35,12 @@
             <artifactId>jbcrypt</artifactId>
             <version>0.4</version>
         </dependency>
+        <!-- Jakarta Mail API -->
+        <dependency>
+            <groupId>jakarta.mail</groupId>
+            <artifactId>jakarta.mail-api</artifactId>
+            <version>2.0.1</version>
+        </dependency>
     </dependencies>
     
     
