sending user email

--- a/HubTechSolutionsjava+maven/pom.xml
+++ b/HubTechSolutionsjava+maven/pom.xml
@@ -41,6 +41,12 @@
             <artifactId>jakarta.mail-api</artifactId>
             <version>2.0.1</version>
         </dependency>
+        <!-- Jakarta Mail API implementation -->
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>jakarta.mail</artifactId>
+            <version>2.0.1</version>
+        </dependency>
     </dependencies>
     
     
